--- a/index.html
+++ b/index.html
@@ -1,22 +1,320 @@
-
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html dir="rtl" lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>آلة حاسبة متطورة</title>
-    <link rel="stylesheet" href="/static/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>sa AI - دردشة ذكاء اصطناعي</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <style>
+    :root {
+      --bg: #343541;
+      --card: #444654;
+      --text: #d1d5db;
+      --input-bg: #40414f;
+      --primary: #10a37f;
+      --border: #5a5f76;
+      --error: #f56565;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', sans-serif;
+    }
+    body {
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 10px;
+    }
+    .container {
+      width: 100%;
+      max-width: 700px;
+      height: 90vh;
+      background: var(--card);
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+    .header {
+      padding: 0.75rem 1rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      background: var(--bg);
+    }
+    .header i.fa-robot {
+      font-size: 1.6rem;
+      color: var(--primary);
+    }
+    .header h1 {
+      flex: 1;
+      font-size: 1.3rem;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+    }
+    .header .clear-chat {
+      font-size: 1.2rem;
+      color: var(--error);
+      cursor: pointer;
+    }
+    .chat-container {
+      flex: 1;
+      padding: 0.75rem;
+      overflow-y: auto;
+    }
+    .message {
+      margin-bottom: 0.75rem;
+      position: relative;
+    }
+    .message.user {
+      text-align: right;
+    }
+    .message.bot {
+      text-align: left;
+    }
+    .bubble {
+      display: inline-block;
+      padding: 0.6rem 0.8rem;
+      border-radius: 12px;
+      line-height: 1.4;
+      font-size: 0.95rem;
+    }
+    .message.user .bubble {
+      background: var(--input-bg);
+    }
+    .message.bot .bubble {
+      background: var(--bg);
+      border: 1px solid var(--border);
+    }
+    .tools {
+      display: flex;
+      gap: 8px;
+      font-size: 0.9rem;
+      margin-top: 4px;
+      color: var(--primary);
+    }
+    .tools i {
+      cursor: pointer;
+    }
+    .chat-input {
+      display: flex;
+      padding: 0.4rem;
+      background: var(--input-bg);
+    }
+    .chat-input textarea {
+      flex: 1;
+      border: none;
+      border-radius: 6px;
+      padding: 0.6rem;
+      background: var(--card);
+      color: var(--text);
+      resize: none;
+      outline: none;
+      font-size: 0.95rem;
+    }
+    .chat-input button {
+      margin-left: 0.4rem;
+      width: 36px;
+      height: 36px;
+      border: none;
+      border-radius: 50%;
+      background: var(--primary);
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .chat-input button:hover {
+      opacity: 0.9;
+    }
+    @media (max-width: 400px) {
+      .header {
+        padding: 0.5rem;
+      }
+      .chat-input {
+        padding: 0.3rem;
+      }
+      .chat-input button {
+        width: 32px;
+        height: 32px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="calculator">
-        <h1>آلة حاسبة متطورة</h1>
-        <form method="post" action="/calculate">
-            <input type="text" name="expression" placeholder="اكتب العملية هنا" value="{{ expression or '' }}" required>
-            <button type="submit">احسب</button>
-        </form>
-        {% if result is not none %}
-            <div class="result">النتيجة: {{ result }}</div>
-        {% endif %}
-        <p>يمكنك استخدام دوال مثل: <code>sqrt(9), sin(0), cos(0), log(10), pow(2,3)</code></p>
+  <div class="container">
+    <div class="header">
+      <i class="fas fa-robot"></i>
+      <h1>مدرس اللغة الإنجليزية <i class="fas fa-cog" style="font-size:1.1rem;color:var(--primary);" title="إعدادات"></i></h1>
+      <i class="fas fa-trash clear-chat" title="مسح الدردشة"></i>
     </div>
+    <div id="chatContainer" class="chat-container"></div>
+    <div id="statusBar" class="status"></div>
+    <div class="chat-input">
+      <textarea id="userInput" rows="1" placeholder="اكتب رسالتك هنا..."></textarea>
+      <button onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
+      <input id="apiKey" type="hidden" value="AIzaSyBUqzhaui0pz0PqhCsVEpQYfOHsCYKtPBk" />
+    </div>
+  </div>
+  <script>
+    const chatContainer = document.getElementById("chatContainer");
+    const statusBar = document.getElementById("statusBar");
+    const userInput = document.getElementById("userInput");
+    const apiKey = document.getElementById("apiKey").value;
+    const clearBtn = document.querySelector('.clear-chat');
+    let conversationHistory = [];
+    let questionCount = 0;
+
+    function loadChat() {
+      const saved = localStorage.getItem('chatHistory');
+      if (saved) {
+        conversationHistory = JSON.parse(saved);
+        conversationHistory.forEach(item => appendMessage(item));
+      } else {
+        addBot("مرحبًا بك في *مدرس اللغة الإنجليزية*! تعليمات صارمة: ممنوع منعا باتا الخروج من منهج اللغة الإنجليزية للثانوية العامة المصرية. وهو مدرس لغة إنجليزية مصري ممنوع يجاوب على أي سؤال خارج المنهج أو يتكلم عن جوجل تحت أي ظرف.");
+      }
+      const pending = localStorage.getItem('pendingQuestion');
+      if (pending) {
+        localStorage.removeItem('pendingQuestion');
+        sendBotResponse(pending);
+      }
+    }
+
+    function saveChat() {
+      localStorage.setItem('chatHistory', JSON.stringify(conversationHistory));
+    }
+
+    clearBtn.onclick = () => {
+      if (confirm('هل أنت متأكد من مسح كامل الدردشة؟')) {
+        localStorage.removeItem('chatHistory');
+        localStorage.removeItem('pendingQuestion');
+        chatContainer.innerHTML = '';
+        conversationHistory = [];
+      }
+    };
+
+    function appendMessage(item) {
+      const { sender, text, isCreatorInfo } = item;
+      const wrapper = document.createElement("div");
+      wrapper.className = `message ${sender}`;
+      const bubble = document.createElement("div");
+      bubble.className = "bubble";
+      if (isCreatorInfo) {
+        const icon = document.createElement("i");
+        icon.className = "fas fa-user-shield";
+        icon.title = "تم إنشائي بواسطة سيف هاني";
+        icon.style.marginLeft = "6px";
+        icon.style.color = "var(--primary)";
+        bubble.appendChild(icon);
+      }
+      bubble.appendChild(document.createTextNode(text));
+      wrapper.appendChild(bubble);
+      const tools = document.createElement("div");
+      tools.className = "tools";
+      const del = document.createElement("i");
+      del.className = "fas fa-trash-alt";
+      del.title = "حذف";
+      del.onclick = () => {
+        wrapper.remove();
+        conversationHistory = conversationHistory.filter(i => i !== item);
+        saveChat();
+      };
+      const retry = document.createElement("i");
+      retry.className = "fas fa-redo-alt";
+      retry.title = "إعادة";
+      retry.onclick = () => {
+        userInput.value = item.sender === 'user' ? item.text : '';
+        if (item.sender === 'user') sendMessage();
+      };
+      const copy = document.createElement("i");
+      copy.className = "fas fa-copy";
+      copy.title = "نسخ";
+      copy.onclick = () => navigator.clipboard.writeText(text);
+      tools.append(del, retry, copy);
+      wrapper.appendChild(tools);
+      chatContainer.appendChild(wrapper);
+      chatContainer.scrollTop = chatContainer.scrollHeight;
+    }
+
+    function addUser(text) {
+      const item = { sender: 'user', text, isCreatorInfo: false };
+      appendMessage(item);
+      conversationHistory.push(item);
+      saveChat();
+      questionCount++;
+      if (questionCount % 2 === 0) {
+        localStorage.setItem('pendingQuestion', text);
+        window.location.href = "https://www.profitableratecpm.com/is6qkgzcb?key=89b5b2c5540c42aac27c41018a1414d2";
+      }
+    }
+
+    function addBot(text, isCreatorInfo = false) {
+      const item = { sender: 'bot', text, isCreatorInfo };
+      appendMessage(item);
+      conversationHistory.push(item);
+      saveChat();
+    }
+
+    function sendBotResponse(text) {
+      if (/مين\s+(اللي|من)\s+(عمله|صنعوه)/i.test(text)) {
+        addBot('تم إنشائي بواسطة سيف هاني', true);
+      } else {
+        addBot(text);
+      }
+    }
+
+    function setStatus(msg, isError = false) {
+      statusBar.textContent = msg;
+      statusBar.className = isError ? 'status error' : 'status';
+      if (!isError) setTimeout(() => (statusBar.textContent = ''), 1500);
+    }
+
+    async function sendMessage() {
+      const text = userInput.value.trim();
+      if (!text) return;
+      addUser(text);
+      userInput.value = '';
+      setStatus('جاري المعالجة...');
+      const forbidden = /خارج\s+المنهج|جوجل/i;
+      if (forbidden.test(text)) {
+        setTimeout(() => {
+          addBot('ممنوع منعا باتا الإجابة على أي سؤال خارج منهج اللغة الإنجليزية أو عن جوجل.', false);
+          setStatus('');
+        }, 300);
+        return;
+      }
+      try {
+        const prompt =
+          conversationHistory
+            .map(i => (i.sender === 'user' ? `المستخدم: ${i.text}` : `مدرس اللغة الإنجليزية: ${i.text}`))
+            .join('\n') + '\nمدرس اللغة الإنجليزية: ';
+        const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] }),
+        });
+        const data = await res.json();
+        const reply = data.candidates?.[0]?.content?.parts?.[0]?.text.trim() || 'لم أستلم رد.';
+        sendBotResponse(reply);
+      } catch {
+        setStatus('خطأ في الاتصال', true);
+      }
+    }
+
+    userInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        sendMessage();
+      }
+    });
+
+    loadChat();
+  </script>
 </body>
 </html>
